--- a/src/main/resources/velocity/index.vm
+++ b/src/main/resources/velocity/index.vm
@@ -12,7 +12,9 @@
 </section>
 <div id="info">
     <p>Double-click to edit a todo</p>
+    <button style="color: #999999; border: inherit; font-size: 20px" ic-get-from="/exit">Exit</button>
 </div>
+
 <script src="/js/vendor/jquery-1.12.4.min.js"></script>
 <script src="/js/vendor/intercooler-0.9.6.min.js"></script>
 <script src="/js/app.js"></script>
